Gitignore güncellemesi :star:

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /NetBeans-Projects/OgrenciOtomasyonu/build/
 /NetBeans-Projects/OgrenciOtomasyonu/nbproject/private/
 /NetBeans-Projects/Robots/build/
+/NetBeans-Projects/Robots/dist/
 /NetBeans-Projects/Robots/nbproject/private/
 /NetBeans-Projects/YilanOyunuKalibi/build/
 /NetBeans-Projects/YilanOyunuKalibi/nbproject/private/
